# langchain-iointelligence

./: .env.example  .flake8  .flake8.ultra-relaxed  .gitignore  =2.0  =8.3.4  COMMIT_MESSAGE.md  CONTRIBUTING.md  LINT_OPTIONS.md  MANIFEST.in  Makefile  PUBLISH_GUIDE.md  PUSH_CHECKLIST.md  README.md  TESTPYPI_GUIDE.md  analyze_project_structure.sh  check_flake8.py  check_installation.py  check_metadata.sh  cleanup_for_push.sh  create_unique_version.sh  debug_metadata.sh  debug_testpypi_upload.sh  debug_upload.sh  demo_test.py  final_cleanup.sh  final_push.sh  final_test.sh  final_verification.py  fix_environment.sh  fix_pypirc.sh  fix_testpypi.sh  lint_and_test.sh  mypy.ini  post_publish_check.sh  pre_publish_check.sh  prepare_release.sh  publish_to_pypi.sh  publish_to_pypi_prod.sh  push_to_github.sh  (+28 more)
.github/workflows/: publish.yml  test.yml
examples/: advanced_usage.py  async_usage.py  basic_usage.py  chain_example.py  chat_examples.py  modern_usage.py  tool_calling_usage.py  vision_usage.py
langchain_iointelligence/: __init__.py  async_http_client.py  chat.py  exceptions.py  http_client.py  llm.py  streaming.py  utils.py  vision.py
tests/: conftest.py  test_async.py  test_base_url.py  test_basic.py  test_chat.py  test_llm.py  test_standard.py  test_streaming.py  test_tools.py  test_usage_metadata.py  test_utils.py  test_vision.py
